@@ -48,6 +48,14 @@ import org.apache.lucene.util.TestUtil;
 public class TestSortRandom extends LuceneTestCase {
 
   public void testRandomStringSort() throws Exception {
+    testRandomStringSort(SortField.Type.STRING);
+  }
+
+  public void testRandomStringValSort() throws Exception {
+    testRandomStringSort(SortField.Type.STRING_VAL);
+  }
+
+  private void testRandomStringSort(SortField.Type type) throws Exception {
     Random random = new Random(random().nextLong());
 
     final int NUM_DOCS = atLeast(100);
@@ -125,7 +133,7 @@ public class TestSortRandom extends LuceneTestCase {
       final SortField sf;
       final boolean sortMissingLast;
       final boolean missingIsNull;
-      sf = new SortField("stringdv", SortField.Type.STRING, reverse);
+      sf = new SortField("stringdv", type, reverse);
       // Can only use sort missing if the DVFormat
       // supports docsWithField:
       sortMissingLast = defaultCodecSupportsDocsWithField() && random().nextBoolean();
