@@ -60,6 +60,14 @@ import org.apache.lucene.util.TestUtil;
 public class TestFieldCacheSortRandom extends LuceneTestCase {
 
   public void testRandomStringSort() throws Exception {
+    testRandomStringSort(SortField.Type.STRING);
+  }
+
+  public void testRandomStringValSort() throws Exception {
+    testRandomStringSort(SortField.Type.STRING_VAL);
+  }
+
+  private void testRandomStringSort(SortField.Type type) throws Exception {
     Random random = new Random(random().nextLong());
 
     final int NUM_DOCS = atLeast(100);
@@ -138,7 +146,7 @@ public class TestFieldCacheSortRandom extends LuceneTestCase {
       final SortField sf;
       final boolean sortMissingLast;
       final boolean missingIsNull;
-      sf = new SortField("stringdv", SortField.Type.STRING, reverse);
+      sf = new SortField("stringdv", type, reverse);
       sortMissingLast = random().nextBoolean();
       missingIsNull = true;
 
